{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 801,
  "lineage": "4c52d30a-f6bf-8d6f-07f0-990686735cb7",
  "resources": [
    {
      "module": "module.vpn-main",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d22cb42370a067ad",
            "domain": "vpc",
            "id": "eipalloc-0cd32e3c3eca48f78",
            "instance": "i-0e2f3eb6e5cf1f532",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-02510a7d2919e4adc",
            "private_dns": "ip-10-0-101-155.eu-west-2.compute.internal",
            "private_ip": "10.0.101.155",
            "public_dns": "ec2-18-132-229-92.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.229.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpn-main.aws_iam_instance_profile.vpn_profile",
            "module.vpn-main.data.aws_ami.ami_latest",
            "module.vpn-main.data.aws_availability_zones.available",
            "module.vpn-main.module.ec2-instance.aws_instance.this",
            "module.vpn-main.module.ec2-instance.aws_spot_instance_request.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_subnet.public",
            "random_password.mysql_root_password",
            "random_password.openvpn_admin_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095c250f1ce4accce",
            "arn": "arn:aws:ec2:eu-west-2:373633196736:instance/i-0e2f3eb6e5cf1f532",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "VPN-twsgo_profile_master",
            "id": "i-0e2f3eb6e5cf1f532",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tws-vpn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02510a7d2919e4adc",
            "private_dns": "ip-10-0-101-155.eu-west-2.compute.internal",
            "private_ip": "10.0.101.155",
            "public_ip": "52.56.44.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05bb73e5d931fea82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019ee72e1592e8591",
            "tags": {
              "Environment": "prod",
              "Name": "master-vpn-instance",
              "Project": "TWS-VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "master-vpn-instance",
              "Project": "TWS-VPN",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "master-vpn-instance"
            },
            "vpc_security_group_ids": [
              "sg-083b6373c38e7b295"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.vpn-main.aws_iam_instance_profile.vpn_profile",
            "module.vpn-main.data.aws_ami.ami_latest",
            "module.vpn-main.data.aws_availability_zones.available",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_subnet.public",
            "random_password.mysql_root_password",
            "random_password.openvpn_admin_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:373633196736:security-group/sg-083b6373c38e7b295",
            "description": "Security group for EC2 instance with VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083b6373c38e7b295",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB(ipv4)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VPN-GUI-service ports (ipv4)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VPN-GUI-service ports (ipv4)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VPN-service ports (ipv4)",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              }
            ],
            "name": "tws-vpn-20211020135424325300000001",
            "name_prefix": "tws-vpn-",
            "owner_id": "373633196736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tws-vpn",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tws-vpn",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c9f7106f5fdc68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpn-main.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-73757634",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-083b6373c38e7b295",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1633038098",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-083b6373c38e7b295",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "VPN-GUI-service ports (ipv4)",
            "from_port": 80,
            "id": "sgrule-3621548711",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-083b6373c38e7b295",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_vpc.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "VPN-GUI-service ports (ipv4)",
            "from_port": 443,
            "id": "sgrule-4184772368",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-083b6373c38e7b295",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "DB(ipv4)",
            "from_port": 3306,
            "id": "sgrule-3901562916",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-083b6373c38e7b295",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "VPN-service ports (ipv4)",
            "from_port": 1194,
            "id": "sgrule-2541158793",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-083b6373c38e7b295",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1194,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.vpc.aws_vpc.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:373633196736:internet-gateway/igw-03795500ae9cb60b8",
            "id": "igw-03795500ae9cb60b8",
            "owner_id": "373633196736",
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a6c9f7106f5fdc68"
          },
          "dependencies": [
            "module.vpn-main.module.vpc.aws_vpc.this",
            "module.vpn-main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03795500ae9cb60b8",
            "id": "r-rtb-05c0fddccc3d48a691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05c0fddccc3d48a69",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.vpc.aws_internet_gateway.this",
            "module.vpn-main.module.vpc.aws_route_table.public",
            "module.vpn-main.module.vpc.aws_vpc.this",
            "module.vpn-main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:373633196736:route-table/rtb-05c0fddccc3d48a69",
            "id": "rtb-05c0fddccc3d48a69",
            "owner_id": "373633196736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03795500ae9cb60b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6c9f7106f5fdc68"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-main.module.vpc.aws_vpc.this",
            "module.vpn-main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043d6f14984081132",
            "route_table_id": "rtb-05c0fddccc3d48a69",
            "subnet_id": "subnet-019ee72e1592e8591"
          },
          "dependencies": [
            "module.vpn-main.data.aws_availability_zones.available",
            "module.vpn-main.module.vpc.aws_route_table.public",
            "module.vpn-main.module.vpc.aws_subnet.public",
            "module.vpn-main.module.vpc.aws_vpc.this",
            "module.vpn-main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:373633196736:subnet/subnet-019ee72e1592e8591",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-019ee72e1592e8591",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373633196736",
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a6c9f7106f5fdc68"
          },
          "dependencies": [
            "module.vpn-main.data.aws_availability_zones.available",
            "module.vpn-main.module.vpc.aws_vpc.this",
            "module.vpn-main.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-main.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpn-main.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:373633196736:vpc/vpc-0a6c9f7106f5fdc68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05291eb4a4e52b36b",
            "default_route_table_id": "rtb-08343ecab1ae07504",
            "default_security_group_id": "sg-02f639efa9a2b72ef",
            "dhcp_options_id": "dopt-25a0144c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a6c9f7106f5fdc68",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08343ecab1ae07504",
            "owner_id": "373633196736",
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpn-slave",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09c805397a9ccc52a",
            "domain": "vpc",
            "id": "eipalloc-372dd036",
            "instance": "i-05163903417313562",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0bfb77bd1daa490e0",
            "private_dns": "ip-10-0-101-233.eu-central-1.compute.internal",
            "private_ip": "10.0.101.233",
            "public_dns": "ec2-18-195-193-109.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.195.193.109",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpn-main.aws_eip.public_ip",
            "module.vpn-main.aws_iam_instance_profile.vpn_profile",
            "module.vpn-main.data.aws_ami.ami_latest",
            "module.vpn-main.data.aws_availability_zones.available",
            "module.vpn-main.module.ec2-instance.aws_instance.this",
            "module.vpn-main.module.ec2-instance.aws_spot_instance_request.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_subnet.public",
            "module.vpn-slave.aws_iam_instance_profile.vpn_profile",
            "module.vpn-slave.data.aws_ami.ami_latest",
            "module.vpn-slave.data.aws_availability_zones.available",
            "module.vpn-slave.module.ec2-instance.aws_instance.this",
            "module.vpn-slave.module.ec2-instance.aws_spot_instance_request.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-slave.module.vpc.aws_subnet.public",
            "random_password.mysql_root_password",
            "random_password.openvpn_admin_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0423663b8ab29a638",
            "arn": "arn:aws:ec2:eu-central-1:373633196736:instance/i-05163903417313562",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "VPN-twsgo_profile_slave",
            "id": "i-05163903417313562",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "tws-vpn-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bfb77bd1daa490e0",
            "private_dns": "ip-10-0-101-233.eu-central-1.compute.internal",
            "private_ip": "10.0.101.233",
            "public_ip": "18.156.77.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04ae2c88199d417b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ec09047ef2e99d69",
            "tags": {
              "Environment": "prod",
              "Name": "slave-vpn-instance",
              "Project": "TWS-VPN",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "slave-vpn-instance",
              "Project": "TWS-VPN",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "slave-vpn-instance"
            },
            "vpc_security_group_ids": [
              "sg-0585ded8a02434a03"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.vpn-main.aws_eip.public_ip",
            "module.vpn-main.aws_iam_instance_profile.vpn_profile",
            "module.vpn-main.data.aws_ami.ami_latest",
            "module.vpn-main.data.aws_availability_zones.available",
            "module.vpn-main.module.ec2-instance.aws_instance.this",
            "module.vpn-main.module.ec2-instance.aws_spot_instance_request.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this",
            "module.vpn-main.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-main.module.vpc.aws_subnet.public",
            "module.vpn-slave.aws_iam_instance_profile.vpn_profile",
            "module.vpn-slave.data.aws_ami.ami_latest",
            "module.vpn-slave.data.aws_availability_zones.available",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-slave.module.vpc.aws_subnet.public",
            "random_password.mysql_root_password",
            "random_password.openvpn_admin_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:373633196736:security-group/sg-0585ded8a02434a03",
            "description": "Security group for EC2 instance with VPN",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0585ded8a02434a03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB(ipv4)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VPN-GUI-service ports (ipv4)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VPN-GUI-service ports (ipv4)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "VPN-service ports (ipv4)",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              }
            ],
            "name": "tws-vpn-20211020135424059100000001",
            "name_prefix": "tws-vpn-",
            "owner_id": "373633196736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "tws-vpn",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tws-vpn",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f6328d5d956291d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3826382349",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0585ded8a02434a03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3929614244",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0585ded8a02434a03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-slave.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.security_group_vpn",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "VPN-GUI-service ports (ipv4)",
            "from_port": 80,
            "id": "sgrule-1555266065",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0585ded8a02434a03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-slave.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "VPN-GUI-service ports (ipv4)",
            "from_port": 443,
            "id": "sgrule-1160414579",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0585ded8a02434a03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "DB(ipv4)",
            "from_port": 3306,
            "id": "sgrule-1183337754",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0585ded8a02434a03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "VPN-service ports (ipv4)",
            "from_port": 1194,
            "id": "sgrule-963800247",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0585ded8a02434a03",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1194,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this",
            "module.vpn-slave.module.security_group_vpn.aws_security_group.this_name_prefix",
            "module.vpn-slave.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:373633196736:internet-gateway/igw-0ea0009b6ecdf1c5b",
            "id": "igw-0ea0009b6ecdf1c5b",
            "owner_id": "373633196736",
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f6328d5d956291d"
          },
          "dependencies": [
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ea0009b6ecdf1c5b",
            "id": "r-rtb-0da1ddb035f2ee30d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da1ddb035f2ee30d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.vpc.aws_internet_gateway.this",
            "module.vpn-slave.module.vpc.aws_route_table.public",
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:373633196736:route-table/rtb-0da1ddb035f2ee30d",
            "id": "rtb-0da1ddb035f2ee30d",
            "owner_id": "373633196736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ea0009b6ecdf1c5b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-05f6328d5d956291d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0ffaebecb343334",
            "route_table_id": "rtb-0da1ddb035f2ee30d",
            "subnet_id": "subnet-0ec09047ef2e99d69"
          },
          "dependencies": [
            "module.vpn-slave.data.aws_availability_zones.available",
            "module.vpn-slave.module.vpc.aws_route_table.public",
            "module.vpn-slave.module.vpc.aws_subnet.public",
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:373633196736:subnet/subnet-0ec09047ef2e99d69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0ec09047ef2e99d69",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "373633196736",
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc-public-eu-central-1a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-05f6328d5d956291d"
          },
          "dependencies": [
            "module.vpn-slave.data.aws_availability_zones.available",
            "module.vpn-slave.module.vpc.aws_vpc.this",
            "module.vpn-slave.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn-slave.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.vpn-slave.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:373633196736:vpc/vpc-05f6328d5d956291d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3846f939cdd5e45",
            "default_route_table_id": "rtb-02717d69f46057b03",
            "default_security_group_id": "sg-09ba56dc29c2713e4",
            "dhcp_options_id": "dopt-21e45449",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05f6328d5d956291d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02717d69f46057b03",
            "owner_id": "373633196736",
            "tags": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "TWS-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}